--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,14 @@ html, body {
     #mobile-background-video {
         display: none; 
     }
+
+    .intro-text {
+        margin-top: 1rem;
+    }
+
+    .button-container {
+        margin-bottom: 0rem!important;
+    }
 }
 
 @media (max-width: 767px) {
@@ -31,6 +39,14 @@ html, body {
     }
     #mobile-background-video {
         display: block; 
+    }
+
+    .intro-text {
+        margin-top: 1rem;
+    }
+
+    .button-container {
+        margin-bottom: 0rem!important;
     }
 }
 
